[project]
name = "DeDupPic"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
